<resources>
    <string name="app_name">SaborDIF</string>
    <string name="vendidas">Vendidas:</string>
    <string name="_cero">0</string>
    <string name="donadas">Donadas:</string>
    <string name="_0">0</string>
    <string name="registrar_comensal">Registrar Comensal</string>
    <string name="registrar_dependiente">Registrar dependiente</string>
    <string name="registrar_comida">Registrar comida</string>
    <string name="bienvenido_a_sabordif">¡Bienvenido a SaborDIF!</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="id_comedor">ID Comedor</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresarBtn">Ingresar</string>
    <string name="registro_comensal">REGISTRO COMENSAL</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="curp">CURP</string>
    <string name="escanear_qr">Escanear QR CURP</string>
    <string name="registrar">Registrar</string>
    <string name="credenciales">Por favor ingrese sus credenciales:</string>
    <string name="acceder">Acceder</string>
    <string name="registro_dependiente">REGISTRO DEPENDIENTE</string>
    <string name="id_dependiente">ID Dependiente</string>
    <string name="registro_comida">REGISTRO COMIDA</string>
    <string name="id_comensal_asociado">ID Comensal Asociado</string>
    <string name="nombre_id_del_comensal">Nombre o ID del comensal</string>
    <string name="comida_adicional">¿Desea llevar comida para alguien más?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="registro_comida_adicional">REGISTRO COMIDA ADICIONAL</string>
    <string name="proceder_al_pago">Proceder al pago</string>
    <string name="para_quienes">¿Para quién?</string>
    <string name="pago_13">Pago: $13</string>
    <string name="pago_o_donativo">¿PAGO O DONATIVO?</string>
    <string name="donacion_0">Donación: $0</string>
    <string name="finalizar">Finalizar</string>
    <string name="genero">Género</string>
    <string name="condicion">Condición</string>

    <string-array name="arrIdComedor">
        <item>CLosOlivos</item>
        <item>CAdolfoLopezM</item>
        <item>CHogaresAtizapan</item>
        <item>CRinconadaBonfil</item>
        <item>CSanJuanBusco</item>
    </string-array>

    <string-array name="arrIdCondicion">
        <item>Discapacidad visual</item>
        <item>Discapacidad auditiva</item>
        <item>Discapacidad motriz</item>
        <item>Discapacidad intelectual o cognitiva</item>
        <item>Embarazada</item>
        <item>Tercera edad</item>
        <item>Ninguna/No aplica</item>
    </string-array>

    <string-array name="arrComidaAdicionalCantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="arrPersonaComidaAd">
        <item>Rosa Itzel Figueroa Rosas</item>
        <item>Arturo Montes González</item>
        <item>Laura Sofía Martínez Jiménez</item>
        <item>Ares Ortiz Botello</item>
        <item>Andrés Iván Rodríguez Méndez</item>
        <item>Alan Alcántara Ávila</item>
        <item>Diego Manjarrez Viveros</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="codigo_qr">Este es su código QR:</string>
    <string name="buscar_dependencias">Buscar dependencias</string>
    <string-array name="PagoDonacion">
        <item>Pago: $13</item>
        <item>Donación: $0</item>
    </string-array>
    <string-array name="ParaLlevar">
        <item>Comer aquí</item>
        <item>Para llevar</item>
    </string-array>

</resources>