<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panmorada"
    tools:context=".view.ComensalView">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtRegisComensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registro_comensal"
                    android:layout_marginBottom="9dp"
                    android:textSize="32sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/Negro"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nombreComensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp"
                        android:background="@drawable/boton_hueso"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/nombre" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtApellidoP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputApellidoP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido_paterno"
                        android:background="@drawable/boton_hueso"
                        android:fontFamily="@font/poppins"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtApellidoM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputApellidoM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_hueso"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/apellido_materno" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputGenero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_hueso"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/genero" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtCURP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCURP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_hueso"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/curp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtCondicion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/condicion"
                    android:background="@drawable/boton_hueso"
                    android:layout_marginTop="25dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spnCondicion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="5dp"
                    android:entries="@array/arrIdCondicion" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegistrar"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/registrar"
                    android:textColor="@color/Hueso"
                    android:fontFamily="@font/poppins_semibold"
                    android:background="@drawable/boton_morado"
                    android:textSize="20sp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:clickable="true"
                    android:src="@android:drawable/ic_menu_camera" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/Hueso"
                    android:textSize="18sp"
                    android:text="@string/escanear_qr" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>