<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panverde"
    tools:context=".view.PagoDonativo">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPagoDonativo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/pago_o_donativo"
                    android:textAlignment="center"
                    android:textColor="@color/Negro"
                    android:textSize="32sp" />

                <ImageView
                    android:id="@+id/imagPagoDonativo"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/payment" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/boton_hueso"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pago_13"
                    android:textAlignment="center"
                    android:textSize="26sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFinalizar"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/boton_verde"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/finalizar"
                    android:textColor="@color/Hueso"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>