<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panrosa"
    tools:context=".view.Dependiente">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtRegisDependiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registro_dependiente"
                    android:layout_marginBottom="10dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/Negro"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/user"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/IDDependiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputIDDependiente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_hueso"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/id_dependiente" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/relationship" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIDComensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputIDComensal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="ID Comensal Asociado"
                        android:background="@drawable/boton_hueso"
                        android:fontFamily="@font/poppins"/>
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegistrarDependiente"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/registrar"
                    android:textColor="@color/Hueso"
                    android:fontFamily="@font/poppins_semibold"
                    android:background="@drawable/boton_rosa_fuerte"
                    android:textSize="20sp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/escanearQRcomensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:clickable="true"
                    android:layout_marginTop="40dp"
                    android:src="@android:drawable/ic_menu_camera"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/txtQRcomensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/escanear_qr"
                    android:textColor="@color/Navy"
                    android:textSize="19sp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>