<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panazul"
    tools:context=".view.Comida">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtRegisComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/registro_comida"
                    android:textAlignment="center"
                    android:textColor="@color/Negro"
                    android:textSize="35sp" />

                <ImageView
                    android:id="@+id/imagComida"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/restaurant" />

                <TextView
                    android:id="@+id/txtComensalComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/Navy"
                    android:text="Comensal: "
                    android:fontFamily="@font/poppins_semibold"
                    tools:text="Comensal: Rosita Fresita" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginTop="8dp"

                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/NombreComensal"
                            android:layout_width="318dp"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputIDComensalComida"
                                android:layout_width="318dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/boton_hueso"
                                android:fontFamily="@font/poppins"
                                android:hint="ID del Comensal"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/escanearQRDependienteRegistroComida"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:clickable="true"
                            android:src="@android:drawable/ic_menu_camera"
                            app:backgroundTint="@color/Azulin" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spnPagoComidaComensal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/PagoDonacion"/>

                    <Spinner
                        android:id="@+id/spnParaLlevarComidaComensal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/ParaLlevar"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtComidaAdicional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comida_adicional"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginTop="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSi"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/si"
                    android:textColor="@color/Hueso"
                    android:fontFamily="@font/poppins_semibold"
                    android:background="@drawable/boton_navy"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNo"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:text="@string/no"
                    android:textColor="@color/Hueso"
                    android:fontFamily="@font/poppins_semibold"
                    android:background="@drawable/boton_navy"
                    android:textSize="20sp"/>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>